GRAD-30: Implement API for Exam Database and refactor APIs with RESTful conventions
